# polkadot-academy

./: README.md
cambridge-2022/materials/4-Substrate/frameless-node-template/frameless-runtime/: expanded.rs
cambridge-2022/materials/additional_activities/merkle-tree/src/: main.rs
cambridge-2022/slides/: index.html
cambridge-2022/slides/syllabus/4-Substrate/4.3-Runtime_and_Host_Functions/: 4.3-Runtime_and_Host_Functions_Slides.html
cambridge-2022/slides/syllabus/4-Substrate/4.4-Transaction_Queue_and_Block_Builder/: 4.4-Transaction_Queue_and_Block_Builder_Slides.html
cambridge-2022/slides/syllabus/4-Substrate/4.5-Db_and_Merklized_Storage/: 4.5-Db_and_Merklized_Storage_Slides.html
cambridge-2022/slides/syllabus/4-Substrate/4.6-Consensus_Block_Authoring_and_Finality/: 4.6-Consensus_Block_Authoring_and_Finality_Slides.html
cambridge-2022/slides/syllabus/4-Substrate/4.8-Substrate_Review/: 4.8-Substrate_CLI_Slides.html
cambridge-2022/slides/syllabus/5-Polkadot/5.1-Polkadot_Architecture_and_Governance/: 5.1-Intro_to_Polkadot_Slides.html
cambridge-2022/slides/syllabus/5-Polkadot/5.2-Cumulus/: 5.2-Cumulus_slides.html
cambridge-2022/slides/syllabus/5-Polkadot/5.4-Parachains/: 5.4-Parachains_slides.html  5.4.1-Parachain_Availability_slides.html
cambridge-2022/slides/syllabus/6-FRAME/6.1-Intro_to_FRAME/: 6.1-Intro_to_FRAME_slides.html
cambridge-2022/slides/syllabus/6-FRAME/6.2-Dispatchables/: Dispatchables_slides.html
cambridge-2022/slides/syllabus/6-FRAME/6.3-Hooks_Inherent/: 6.3-Hooks_inherent_slides.html
cambridge-2022/slides/syllabus/6-FRAME/6.4-Exotic_Stuff/: 6.4-Events_and_Errors_Slides.html  6.4-FRAME_Storage_Slides.html  6.4-Outer_Enum_Slides.html  6.4-PJS-api-crash-course_slides.html  6.4-frame-tips-and-tricks_slides.html
cambridge-2022/slides/syllabus/6-FRAME/6.5-Smart_Contracts/: 6.5-1-Smart_Contracts_Slides.html  6.5-2-Ink_Slides.html  6.5-3-Pallet_Contracts_Slides.html
cambridge-2022/slides/syllabus/7-XCM/7.1-Core_Concepts_of_XCM/: 7.1-Core_Concepts_of_XCM_slides.html
final-project/pallets/quadratic-voting/src/: lib.rs  mock.rs
pallets/quadratic-voting/: Cargo.toml
pallets/quadratic-voting/src/: lib.rs  mock.rs  quadratic-conviction  quadratic-conviction.rs  tests.rs  vote.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
(+1 files in other folders)
